tests/typechecker/pass/306-tuple.hyg
let t: tuple {string, int} = tuple {"hi", 2};
assert(t._2 + 1 = 3)