tests/typechecker/fail/307-tuple.hyg
let t: tuple {int, int} = tuple {1};
assert(t._1 = 1)